--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "spigandromeda/send-mail-bundle",
   "type": "symfony-bundle",
-  "description": "Mail bundle for Symfony 3 to send mails via SMTP and place a copy in the \"Sent Items\" folder",
+  "description": "Mail bundle for Symfony 3 to send mails via SMTP and place a copy in a predefined folder",
   "keywords": [
     "imap",
     "smtp",
@@ -17,7 +17,8 @@
   "require": {
     "php": ">=5.3.2",
     "php-imap/php-imap": "~2.1",
-    "symfony/framework-bundle": ">=3.0.0"
+    "symfony/framework-bundle": ">=3.0.0",
+    "symfony/swiftmailer-bundle": "^2.3",
   },
   "autoload": {
     "psr-4": {
